--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,5 @@
-# Default: LFS for all content under out/
-out/** filter=lfs diff=lfs merge=lfs -text
-
-# Text overrides within out (keep diffable)
-out/**/*.json -filter -diff -merge text
-out/**/*.jsonl -filter -diff -merge text
-out/**/*.csv -filter -diff -merge text
-out/**/*.md -filter -diff -merge text
-out/**/*.txt -filter -diff -merge text
-out/**/*.yaml -filter -diff -merge text
-out/**/*.yml -filter -diff -merge text
-out/**/*.html -filter -diff -merge text
-out/**/*.log -filter -diff -merge text
+# Normalize text files across platforms
+* text=auto
 
 # Global binary types to LFS (any location)
 *.pdf filter=lfs diff=lfs merge=lfs -text
